# chat

./: README.md
chat_core/: Cargo.toml  names.toml
chat_core/src/: client_streams.rs  config.rs  guidelines.rs  lib.rs  message.rs  read.rs  read_write_streams.rs  request.rs  response.rs  user.rs  value.rs  write.rs
client/: Cargo.toml  Config.toml
client/src/: app.rs  chat.rs  chat_gui.rs  lib.rs  main.rs
client/src/config/: gui.rs  mod.rs
server/: Cargo.toml  Config.toml
server/src/: broadcast.rs  client.rs  client_listener.rs  config.rs  lib.rs  main.rs  user.rs
unsafe_testing_client/: Cargo.toml
unsafe_testing_client/src/: main.rs
