[package]
name = "chat_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
simple_logger = "4.1.0"
thiserror = "1.0.40"
toml = "0.7.2"
