[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chat_core = { path = "../chat_core" }
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["serde_derive"] }
toml = "0.7.2"
